--- a/estilos.css
+++ b/estilos.css
@@ -2,19 +2,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    /*outline: 1px solid red;*/
+}
+
+body{
+    padding: 5px;
 }
 header{
-    min-height: 30vh;
-    background-image: url("imagenes/design1_image1.jpg");
+    height: 30vh;
+    background-image: url("./imagenes/design1_image1.jpg");
     background-repeat: no-repeat;
     background-size: 100% 30vh;
     }
+
 .titulo{
     font-family: monospace;
     font-size: 3rem;
+    
 }
 
-h2{
+h2, h4{
     background-color: black;
     color: white;
     text-align: center;
@@ -31,25 +38,64 @@ main{
     min-height: 70vh;
 }
 
-.caja{
-    position: absolute;
-    left: 750px;
-    height: 60vh;
-    margin-top: 20px;
+.contenedor{
+    display: flex;
 }
 
-.pase1{
-    display: inline-block;
-    width: 300px;
-    height: 20px;
+.col-flex1{
+    width: 16%;
+}
+
+.col-flex2{
+    width: 50.6666%;
+}
+
+.col-flex3{
+    width: 33.3333%;
+}
+
+.col-flex4{
+    width: 84%;
+}
+.col1{
+  
+   min-height: 12vh;
+   font-size: 1.5em;
+   font-variant: small-caps;
+   padding-left: 5%;
+
+}
+
+.col2{
     
+    min-height: 12vh;
+    text-align: center;
+    font-size: 1.5em;
 }
 
-p{
-    margin-left: 325px;
+.col3{
+    justify-items: end; 
+    width: 100%;
+    height: 100%;
 }
 
-.p1{
-    display: inline-block;
-    margin-left: 24px;
+.col4{
+    min-height: 12vh;
+    text-align: center;
+    font-size: 1.2rem;
+}
+
+div img{
+    width: 100%;
+    height: 100%;
+} 
+
+#parrafo1, #parrafo2, #parrafo3 {
+    font-size: 0.8em;
+}
+
+table{
+    width: 70%;
+    margin-top: 15px;
+    margin-left: 30px;
 }
